--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 spring.datasource.url= jdbc:postgresql://localhost:5432/ecom-impex-builder 
 spring.datasource.username=postgres 
 spring.datasource.password=admin
-spring.jpa.hibernate.ddl-auto=create-drop
-
+#spring.jpa.hibernate.ddl-auto=create-drop
 
 # Those 2 properties are set because of this : http://vkuzel.blogspot.fr/2016/03/spring-boot-jpa-hibernate-atomikos.html
 # Disable feature detection by this undocumented parameter. Check the org.hibernate.engine.jdbc.internal.JdbcServiceImpl.configure method for more details.
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 # Because detection is disabled you have to set correct dialect by hand.
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+
+impex.builder.csv.separator=;
