--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
+# ecom-impex-builder datasource
 spring.datasource.url= jdbc:postgresql://localhost:5432/ecom-impex-builder 
 spring.datasource.username=postgres 
 spring.datasource.password=admin
-#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create
 
 # Those 2 properties are set because of this : http://vkuzel.blogspot.fr/2016/03/spring-boot-jpa-hibernate-atomikos.html
 # Disable feature detection by this undocumented parameter. Check the org.hibernate.engine.jdbc.internal.JdbcServiceImpl.configure method for more details.
@@ -9,4 +10,9 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 # Because detection is disabled you have to set correct dialect by hand.
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 
-impex.builder.csv.separator=;
+# Impex Writter settings
+impex.writer.csv.separator=;
+impex.writer.folderpath=/home/pierre/workspace/tristan
+
+# Logging settings
+logging.level.root=info
